[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rllib_simpleDQN"
version = "0.0.1"
description = "Simple DQN with ray/rllib"
readme = "README.md"
authors = [{name = "Erwin Yuanhao Li", email = "erwinli@qq.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = ["ray[rllib]>=2.32.0", "torch"]

# [project.urls]
# "Bug Tracker" = "https://github.com/ErwinLiYH/RANsim/issues"
# "Homepage" = "https://github.com/ErwinLiYH/RANsim"
